tests/e2e/assignment_inline.story
(my_service foo) = "bar"
